# Halide

./: BUILD  WORKSPACE  halide.bzl  halide_workspace.bzl
apps/bilateral_grid/: BUILD  bilateral_grid.cpp
apps/blur/: BUILD  halide_blur.cpp
apps/c_backend/: BUILD  pipeline.cpp  pipeline_cpp.cpp
apps/camera_pipe/: BUILD  CMakeLists.txt  Makefile  camera_pipe.cpp  process.cpp
apps/fft/: BUILD  Makefile  fft_aot_test.cpp  main.cpp
apps/images/: BUILD
apps/support/: BUILD  simple_gen.bzl
apps/wavelet/: BUILD
bazel_helpers/: halide_runtime_build_helpers.bzl  halide_workspace.bzl  init_llvm_repository.bzl  llvm.BUILD  llvm_version.bzl.tpl  png.BUILD  workspace.bzl  zlib.BUILD
src/: Associativity.cpp  BoundsInference.cpp  Definition.cpp  Func.cpp  Func.h  Lower.cpp  PartitionLoops.cpp  Pipeline.cpp  PrintLoopNest.cpp  RealizationOrder.cpp  RealizationOrder.h  Schedule.cpp  Schedule.h  ScheduleFunctions.cpp  ScheduleFunctions.h
test/common/: BUILD  cc_failure_test.bzl  check_call_graphs.h
test/correctness/: BUILD  compute_with.cpp  gpu_object_lifetime_1.cpp  gpu_object_lifetime_2.cpp  gpu_object_lifetime_3.cpp
test/error/: BUILD
test/generator/: BUILD  gpu_object_lifetime_aottest.cpp  mandelbrot_generator.cpp  memory_profiler_mandelbrot_generator.cpp
tools/: BUILD  llvm.BUILD  llvm_internal_build_defs.bzl.tpl  llvm_repository.bzl
tutorial/: BUILD  lesson_02_input_image.cpp  lesson_07_multi_stage_pipelines.cpp  lesson_09_update_definitions.cpp  lesson_12_using_the_gpu.cpp  lesson_15_generators_usage.sh  lesson_16_rgb_run.cpp
util/: BUILD
(+6 files in other folders)
